# basilica

./: .gitignore  Cargo.toml  justfile
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  release-adhoc.yml  release.yml
config/: miner.correct.toml  validator.correct.toml  validator.prod.toml  validator.toml.example
crates/bittensor/: Cargo.toml
crates/collateral/: Cargo.toml
crates/collateral/src/: collateral.sol  lib.rs
crates/integration-tests/tests/: validator_weight_setting_flow.rs  weight_setter_build_normalized_weights.rs
crates/miner/: Cargo.toml
crates/miner/src/: config.rs  main.rs  validator_comms.rs  validator_discovery.rs
crates/miner/tests/: mod.rs
crates/validator/src/: lib.rs  main.rs
crates/validator/src/api/: types.rs
crates/validator/src/bittensor_core/: weight_allocation.rs  weight_setter.rs
docs/: miner.md  scoring-and-weights.md
scripts/executor/: Dockerfile  compose.prod.yml  deploy.sh
scripts/executor/systemd/: basilica-executor.service
scripts/miner/: .env.example  README.md  compose.prod.yml  deploy.sh
scripts/miner/systemd/: basilica-miner.service
scripts/public-api/: compose.prod.yml  deploy.sh
scripts/validator/: Dockerfile  compose.dev.yml  compose.prod.yml  deploy.sh
scripts/validator/systemd/: basilica-validator.service
scripts/validator/telemetry/: alloy.yml  config.alloy
telemetry/: README.md  deploy.sh  prometheus.yml
telemetry/ansible/: README.md  playbook.yml
telemetry/ansible/group_vars/: all.yml.example
telemetry/grafana/dashboards/: basilica_validator_logs.json
(+36 files in other folders)
